# psp2cldr

./: .clang-format  .gitignore  CMakeLists.txt  Debug.Dockerfile  Dockerfile  LICENSE  README.md  User.Dockerfile  arm64.Dockerfile  musl.Dockerfile
.devcontainer/: devcontainer.Dockerfile  devcontainer.json
.github/workflows/: build.yml
cmake/: psp2cldr.pc.in
include/: elf.h
include/psp2cldr/: access_proxy.hpp  arch.h  arm_elfloader.hpp  context.hpp  coordinator.hpp  coordinator_impl.hpp  delegate.hpp  emulation.hpp  handle.hpp  imp_provider.hpp  load.hpp  logger.hpp  memory_managers.hpp  native.hpp  panic.hpp  provider.hpp  provider_poke.hpp  semaphore.hpp  velf.hpp
include/psp2cldr/implementation/: arm_elfloader.hpp  coordinator.hpp  logger.hpp  native.hpp  native_msvc.hpp  velf.hpp
include/psp2cldr/utility/: delegate.hpp  handle.hpp  semaphore.hpp
include/vita-toolchain/: LICENSE  sce-elf-defs.h  sce-elf.h  vita-elf.h
sample_implementations/: README.md
sample_implementations/dynamic/: CMakeLists.txt  impl.cc
sample_implementations/static/: CMakeLists.txt  impl.cc
src/: context.cc  emulation.cc  load.cc  memory_managers.cc  native.cc  native_msvc.cc  panic.cc  provider.cc  psp2cldr.cc  psp2cldr_internals.cc
tests/: CMakeLists.txt  README.md
tests/supp_elf/: CMakeLists.txt  basic.c  basic_vfp.c
tests/threading/: CMakeLists.txt  thread_basic1.c  thread_basic2.c
